--- a/TabLayoutExample/app/src/main/res/layout/activity_main.xml
+++ b/TabLayoutExample/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tablelayout.javacodegeeks.tablayoutexample.MainActivity">
-
+    tools:context="com.woowrale.androidlabs.MainActivity">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
@@ -14,12 +12,14 @@
         android:background="?attr/colorPrimary"
         android:elevation="6dp"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        tools:ignore="MissingConstraints"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@id/tab_layout"/>
+        android:layout_below="@id/tab_layout"
+        tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
