--- a/JInstantSearch/app/src/main/res/layout/content_remote_search.xml
+++ b/JInstantSearch/app/src/main/res/layout/content_remote_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.search.remote.RemoteSearchActivity">
+    tools:context="com.woowrale.mvp.ui.search.remote.RemoteSearchActivity">
 
     <EditText
         android:id="@+id/input_search"
