--- a/JInstantSearch/app/src/main/res/menu/menu_main.xml
+++ b/JInstantSearch/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.search.home.SearchActivity">
+    tools:context="com.woowrale.mvp.ui.search.home.SearchActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
