--- a/InstantSearchApp/japp/src/main/res/layout/content_search.xml
+++ b/InstantSearchApp/japp/src/main/res/layout/content_search.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="@dimen/activity_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.woowrale.mvp.ui.search.home.SearchActivity"
+    tools:context="com.woowrale.instantsearch.japp.ui.search.home.SearchActivity"
     tools:showIn="@layout/activity_search">
 
     <TextView
